--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,7 +4,25 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans&family=Source+Code+Pro:wght@300;400;600;700;900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans&family=Source+Code+Pro:wght@300;400;600;700;900&display=swap');
+
 body {
 	font-family: 'Source Code Pro', monospace;
 	background-color: #07070b;
+}
+
+.loader-local {
+	width: 100%;
+	height: 100%;
+	font-size: 4rem;
+	position: absolute;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	z-index: 2;
+	background-color: #07070b;
+}
+.content-overflow-hidden {
+  height: 100vh;
+  overflow: hidden;
 }
